--- a/templates/channel.html
+++ b/templates/channel.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ channel.name }}</title>
     <link rel="stylesheet" type="text/css" href="clap.css">
+    <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,7 +39,7 @@
             width: 100%;
         }
 
-        #player {
+        .video-container video {
             position: absolute;
             top: 0;
             left: 0;
@@ -99,24 +100,6 @@
                 padding: 10px;
             }
         }
-
-        /* Quality selector styling */
-        .quality-selector {
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 0.9rem;
-        }
-
-        .quality-selector:hover {
-            background: rgba(0, 0, 0, 0.9);
-        }
-
     </style>
 </head>
 <body>
@@ -125,44 +108,24 @@
             <h1>{{ channel.name }}</h1>
         </header>
         <div class="video-container">
-            <div id="player"></div>
-            <script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
-            <script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/plugins.HLS.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/mux.js@5.6.7/dist/mux.min.js"></script>
-            <script type="text/javascript" src="https://cdn.jsdelivr.net/clappr.level-selector/latest/level-selector.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/clappr-chromecast-plugin@latest/dist/clappr-chromecast-plugin.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/clappr-pip@latest/dist/clappr-pip.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/clappr-playback-rate-plugin@latest/dist/clappr-playback-rate-plugin.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/shaka-player@2.5.10/dist/shaka-player.compiled.min.js"></script>
-            <script src="//cdn.jsdelivr.net/gh/clappr/dash-shaka-playback@latest/dist/dash-shaka-playback.external.min.js"></script>
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-            <script src="//cdn.jsdelivr.net/npm/@clappr/hlsjs-playback@1.0.1/dist/hlsjs-playback.min.js"></script>
+            <video id="player" class="video-js vjs-default-skin" controls preload="auto">
+                <source src="{{ channel.url }}" type="application/x-mpegURL">
+            </video>
+            <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
+            <script src="https://unpkg.com/videojs-contrib-quality-levels@latest/dist/videojs-contrib-quality-levels.min.js"></script>
             <script>
-                var player = new Clappr.Player({
-                    source: '{{ channel.url }}',
-                    width: '100%',
-                    height: '100%',
-                    autoPlay: true,
-                    plugins: [HlsjsPlayback, LevelSelector, Clappr.MediaControl],
-                    events: {
-                        onReady: function () {
-                            var plugin = this.getPlugin('click_to_pause');
-                            plugin && plugin.disable();
-                        },
-                    },
-                    mimeType: "application/x-mpegURL",
-                    mediacontrol: {
-                        seekbar: "#ff0000",
-                        buttons: "#eee"
-                    },
-                    parentId: "#player",
+                var player = videojs('player', {
+                    autoplay: true,
+                    controls: true,
+                    fluid: true, 
+                    techOrder: ["html5"],
+                    sources: [{
+                        src: '{{ channel.url }}',
+                        type: 'application/x-mpegURL'
+                    }]
                 });
 
-                // Add quality selector control
-                player.addPlugin('qualitySelector', new Clappr.LevelSelector({
-                    container: '#player',
-                    position: 'bottom-right'
-                }));
+                player.qualityLevels(); 
             </script>
         </div>
 
